<resources>
    <string name="app_name">Rest API</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Posts</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="comments">Comments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_id">Comment id :</string>
    <string name="post_id">Post Id :</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="body">Body :</string>
    <string name="third_fragment_label">Third Fragment</string>
</resources>