<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/comment_id_label"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginStart="10dp"
                android:text="@string/comment_id"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/post_id_label"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginStart="10dp"
                android:text="@string/post_id"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginStart="10dp"
                android:text="@string/name"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginStart="10dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/body_label"
                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:layout_marginStart="10dp"
                android:text="@string/body"
                android:textSize="20sp"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/linearLayout1">

            <TextView
                android:id="@+id/comment_id"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="15dp"
                android:text="Comment id"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/post_id"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="15dp"
                android:text="Post Id"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginStart="10dp"
                android:text="Name"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginStart="10dp"
                android:text="Email"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/body"
                android:layout_width="200sp"
                android:layout_height="70sp"
                android:layout_marginStart="10dp"
                android:text="Body"
                android:textSize="20sp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>